--- a/package.json
+++ b/package.json
@@ -4,9 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@aws-sdk/client-personalize": "^3.535.0",
+    "@aws-sdk/client-personalize-runtime": "^3.535.0",
+    "@aws-sdk/client-s3": "^3.535.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "csv-writer": "^1.6.0",
+    "nodemon": "^3.1.0"
+  }
 }
