--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-iam": "^3.535.0",
     "@aws-sdk/client-personalize": "^3.535.0",
     "@aws-sdk/client-personalize-runtime": "^3.535.0",
     "@aws-sdk/client-s3": "^3.535.0",
